--- a/kadai4/index.html
+++ b/kadai4/index.html
@@ -11,7 +11,7 @@
 
     <h1>XXX's Curry Recipe</h1>
     <p>
-      XXX家に代々伝わる一子相伝・門外不出の「<strong>秘伝カレーレシピ</strong>」を、今だけ特別に公開します。<br />
+      テストXXX家に代々伝わる一子相伝・門外不出の「<strong>秘伝カレーレシピ</strong>」を、今だけ特別に公開します。<br />
       秘伝のスパイスと<strong>独自の調理法</strong>が織りなす新世代のカレー、家族全員が笑顔になる魔法の一皿を、ぜひご堪能ください！
     </p>
 
